# LearningAgent

./: .gitattributes  .gitignore  README.md  pyproject.toml  run_ui.bat
docs/: desktop_ui.md  workflow_assurance_guide.md
examples/: gold_rvm.csv  project.txt  standards.csv
examples/demo_rvm/: README.md  gold_rvm.csv  gold_rvm_complete.csv  standards_requirements.csv
examples/demo_rvm/project_documents/: electrical_design.md  evidence_manifest.csv  hazard_report.md  materials_processes_plan.md  mission_profile.md  pressure_system_design.md  system_architecture.md  verification_plan.md  waiver_register.csv
examples/demo_rvm/reference_specs/: demo_spec_abstracts.md  spec_catalog.csv
models/: ollama-models.txt
models/llama-cpp/: README.md
models/ollama/embeddinggemma/: Modelfile  embeddinggemma.gguf
scripts/: build_offline_wheelhouse.ps1  install_offline.ps1  install_ollama_models.ps1
src/learning_agent/: __init__.py  cli.py  ui.py  ui_support.py
src/learning_agent/core/: __init__.py  artifacts.py  documents.py  embeddings.py  evaluation.py  graph.py  langgraph_workflow.py  memory.py  models.py  self_improvement.py  vector_store.py  workflow.py
src/learning_agent/tasks/: __init__.py
src/learning_agent/tasks/rvm/: __init__.py  agents.py  approval.py  compliance.py  evaluation.py  export.py  improvement.py  parsing.py  policies.py  proposals.py  schema.py  workflow.py
tests/: test_agent_definitions.py  test_artifact_controls.py  test_ingestion.py  test_memory.py  test_rvm_compliance.py  test_rvm_workflow.py  test_ui_support.py
