[project]
name = "learning-agent"
version = "0.1.0"
description = "Model-agnostic, offline-first workflow framework for document review and requirements verification."
requires-python = ">=3.10"
readme = "README.md"
authors = [
  { name = "LearningAgent contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
graph = ["langgraph>=1.0"]
retrieval = ["ollama>=0.6"]
all = ["langgraph>=1.0", "ollama>=0.6"]

[project.scripts]
learning-agent = "learning_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
