[project]
name = "learning-agent"
version = "0.1.0"
description = "Model-agnostic, offline-first workflow framework for document review and requirements verification."
requires-python = ">=3.10"
readme = "README.md"
authors = [
  { name = "LearningAgent contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
graph = ["langgraph>=1.0"]
ingestion = ["openpyxl>=3.1"]
local-gguf = ["llama-cpp-python>=0.3"]
all = ["langgraph>=1.0", "openpyxl>=3.1", "llama-cpp-python>=0.3"]

[project.scripts]
learning-agent = "learning_agent.cli:main"
learning-agent-ui = "learning_agent.ui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
